[package]
name = "mine"
version = "0.2.1"
authors = ["Koen Westendorp <koensswestendorp@icloud.com>"]
edition = "2021"

#[profile.release]
#debug = true

[features]
default = ["tui"]
gui = ["dep:winit", "dep:pixels"]
tui = ["dep:console"]

[dependencies]
rand = "0.8"
structopt = "0.3"
console = { version = "0.15", optional = true }
winit = { version = "0.26", optional = true }
pixels = { version = "0.8" , optional = true }
